# orangedb

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  exp.sh
data/siftsmall/: query_embeddings.csv  sift_base_32
src/: CMakeLists.txt  aux_ds.cpp  clustering.cpp  file_handle.cpp  helper_ds.cpp  hnsw.cpp  incremental_index.cpp  index_knn.cpp  main.cpp  partitioned_index.cpp  reclustering_index.cpp  scalar_quantizer.cpp  utils.cpp
src/include/: aux_ds.h  clustering.h  common.h  config.h  distance.h  helper_ds.h  hnsw.h  incremental_index.h  index_knn.h  macros.h  partitioned_index.h  prefetch.h  quantizer.h  reclustering_index.h  scalar_quantizer.h  storage.h  utils.h
src/include/fastQ/: common.h  fastq.h  pair_wise.h  scalar_8bit.h  scalar_test.h
src/include/storage/: data_chunk.h  file_handle.h  index_header.h
